2010-05-30  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Added
	  some tests.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added test
	  for 'Bug 607990 - "Extract Method" refactoring sometimes
	  tries to pass in unnecessary parameter depending on
	  selection'.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Fixed
	  unit test.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for 'Bug 534680 - LINQ keywords missing from
	  Intellisense'.

2010-05-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 605104 - Highlighter fails to find an instance
	  of my method'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: fixed
	  unit test.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests.DefaultEditActions/RemoveTabTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs:
	  Fixed tests.

2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>

	* TestBase.cs:
	* MonoDevelop.Projects\SolutionTests.cs: Fix Windows
	  compatibility issues.

2010-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomPersistenceTests.cs: track api
	  changes.

2010-04-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Fixed unit
	  tests.

2010-04-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
	  test for 'Bug 595240 - Completion list filtering should
	  match on words not just at start'.

2010-04-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for 'Bug 576354 - Type inference failure'.
