@@ -1,3 +1,9 @@
+2010-05-31  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
+	  test for 'Bug 610006 - Intellisense gives members of return
+	  type of functions even when that function isn't invoked'.
+
 2010-05-30  Mike Krüger  <mkrueger@novell.com>
 
 	* Makefile.am:
